tests/snapshots/error_handling_tests__ascii_error_tag_instead_of_value.snap
---
source: tests/error_handling_tests.rs
assertion_line: 61
expression: formatted
---
x Expected non_quoted_string, double_quote_string, single_quote_string, frame_code or semi_colon_string
 --> 3:32
  |
1 | data_test
2 | _entry.id                      1ABC
3 | _entry.description             _another_tag
  |                                ^---
4 | _entry.author                  'Smith, J.'
