tests/snapshots/error_handling_tests__basic_error_unclosed_string.snap
---
source: tests/error_handling_tests.rs
assertion_line: 44
expression: formatted
---
Parse error at l3:c32 because expected non_quoted_string, double_quote_string, single_quote_string, frame_code or semi_colon_string
